Fix the rendered screen to the page if it's off-screen

--- a/assets/main.css
+++ b/assets/main.css
@@ -6,6 +6,14 @@
     image-rendering: pixelated;
 }
 
+[id="screen"].fixed {
+    position: fixed;
+    z-index: 1000;
+    bottom: 1em;
+    left: 1em;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+}
+
 [id="tilemap-choices"] {
     padding: 0;
     list-style: none;
@@ -19,4 +27,9 @@
 [id="tilemap-choices"] img {
     width: 128px;
     cursor: pointer;
+}
+
+[id="padding"] {
+    height: 224px;
+    margin: 1em 0;
 }
